Refactor code structure for improved readability and maintainability

--- a/aboutdetail.html
+++ b/aboutdetail.html
@@ -41,38 +41,35 @@
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-                    <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-                    <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
+                    <li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
+                    <li class="nav-item"><a href="services.html" class="nav-link" data-translate="nav_services">Services</a>
+                    </li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
+                    <li class="nav-item active"><a href="about.html" class="nav-link" data-translate="nav_about">About</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Info</a>
+                            aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" href="cult.html">Cultivation</a>
-                            <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-                            <a class="dropdown-item" href="manu.html">Manufacturing</a>
-                            <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+                            <a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
+                            <a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
-                                class="icon icon-shopping_cart"></span><span
-                                class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
-                    </li> -->
-                     <li class="nav-item dropdown">
+                    <li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false" data-translate="nav_language">
                             Language
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-                            <a class="dropdown-item" href="#" data-lang="en">English</a>
-                            <a class="dropdown-item" href="#" data-lang="fr">Français</a>
+                            <a class="dropdown-item" href="#" data-lang="en" data-translate="lang_en">English</a>
+                            <a class="dropdown-item" href="#" data-lang="fr" data-translate="lang_fr">Français</a>
                         </div>
                     </li>
                 </ul>
-                
+
             </div>
         </div>
     </nav>
@@ -86,9 +83,10 @@
                 <div class="row slider-text justify-content-center align-items-center">
 
                     <div class="col-md-7 col-sm-12 text-center ftco-animate">
-                        <h1 class="mb-3 mt-5 bread">About Us</h1>
-                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span>
-                            <span>About</span>
+                        <h1 class="mb-3 mt-5 bread" data-translate="about_title">About Us</h1>
+                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate="breadcrumb_home">Home</a>
+                            </span>
+                            <span data-translate="breadcrumb_about">About</span>
                         </p>
                     </div>
 
@@ -102,46 +100,46 @@
         <div class="one-half ftco-animate">
             <div class="overlap">
                 <div class="heading-section ftco-animate ">
-                    <span class="subheading">Discover</span>
-                    <h2 class="mb-4">SAFIA GROUP: Our Profile</h2>
+                    <span class="subheading" data-translate="discover_subheading">Discover</span>
+                    <h2 class="mb-4" data-translate="profile_heading">SAFIA GROUP: Our Profile</h2>
                 </div>
                 <div>
-                    <p style="color: white;">SAFIA GROUP is an innovative agricultural company dedicated to the coffee
+                    <p style="color: white;" data-translate="profile_text">SAFIA GROUP is an innovative agricultural company dedicated to the coffee
                         industry. We specialize in PETIT KWILU, a coffee variety truly unique to the world, cultivated
                         exclusively in Kongo Central, DRC. Founded in 2020 by Regine Tika Shungu, our main goal is to
                         promote Congolese coffee, especially the Petit Kwilu, and establish the DRC as a key player in
                         the international coffee market.</p>
 
-                    <h3 style="color: white; margin-top: 20px;">Our Mission</h3>
-                    <p style="color: white;">We're on a mission to promote and add value to high-quality Congolese
+                    <h3 style="color: white; margin-top: 20px;" data-translate="mission_heading">Our Mission</h3>
+                    <p style="color: white;" data-translate="mission_text">We're on a mission to promote and add value to high-quality Congolese
                         coffee. We support local producers, create sustainable jobs, and aim to make Petit Kwilu a
                         globally recognized brand.</p>
 
-                    <h3 style="color: white; margin-top: 20px;">Our Vision</h3>
-                    <p style="color: white;">Our vision is to become the leader in the PETIT KWILU coffee industry, both
+                    <h3 style="color: white; margin-top: 20px;" data-translate="vision_heading">Our Vision</h3>
+                    <p style="color: white;" data-translate="vision_text">Our vision is to become the leader in the PETIT KWILU coffee industry, both
                         in the DRC and internationally. We're doing this by developing the brand, creating a chain of
                         Congolese coffee shops, and contributing to the sustainable economic development of the country.
                     </p>
 
-                    <h3 style="color: white; margin-top: 20px;">Core Activities</h3>
+                    <h3 style="color: white; margin-top: 20px;" data-translate="activities_heading">Core Activities</h3>
                     <ul style="color: white; list-style-type: disc; padding-left: 20px;">
-                        <li>Growing and producing PETIT KWILU coffee in Kongo Central.</li>
-                        <li>Processing: roasting and packaging to ensure top quality.</li>
-                        <li>Selling locally and exporting worldwide.</li>
-                        <li>Developing a chain of modern coffee shops.</li>
-                        <li>Partnering with businesses like hotels, restaurants, supermarkets, and other key players.
+                        <li data-translate="activity_1">Growing and producing PETIT KWILU coffee in Kongo Central.</li>
+                        <li data-translate="activity_2">Processing: roasting and packaging to ensure top quality.</li>
+                        <li data-translate="activity_3">Selling locally and exporting worldwide.</li>
+                        <li data-translate="activity_4">Developing a chain of modern coffee shops.</li>
+                        <li data-translate="activity_5">Partnering with businesses like hotels, restaurants, supermarkets, and other key players.
                         </li>
-                        <li>Training producers and raising awareness about coffee quality.</li>
+                        <li data-translate="activity_6">Training producers and raising awareness about coffee quality.</li>
                     </ul>
 
-                    <h3 style="color: white; margin-top: 20px;">Services We Offer</h3>
+                    <h3 style="color: white; margin-top: 20px;" data-translate="services_heading">Services We Offer</h3>
                     <ul style="color: white; list-style-type: disc; padding-left: 20px;">
-                        <li>Selling coffee beans, sachets, and premium packaged coffee.</li>
-                        <li>Providing technical assistance and training to improve production quality.</li>
-                        <li>Managing and developing our coffee shops.</li>
-                        <li>Exporting coffee to Europe and other markets.</li>
-                        <li>Forging B2B partnerships with hotels, restaurants, and distributors.</li>
-                        <li>Promoting Congolese coffee, particularly #PETITKWILU, through events and campaigns.</li>
+                        <li data-translate="service_1">Selling coffee beans, sachets, and premium packaged coffee.</li>
+                        <li data-translate="service_2">Providing technical assistance and training to improve production quality.</li>
+                        <li data-translate="service_3">Managing and developing our coffee shops.</li>
+                        <li data-translate="service_4">Exporting coffee to Europe and other markets.</li>
+                        <li data-translate="service_5">Forging B2B partnerships with hotels, restaurants, and distributors.</li>
+                        <li data-translate="service_6">Promoting Congolese coffee, particularly #PETITKWILU, through events and campaigns.</li>
                     </ul>
                 </div>
             </div>
@@ -159,8 +157,8 @@
             <div class="row mb-5">
                 <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">About Us</h2>
-                        <p>Founded in 2020 by Regine Tika Shungu, SAFIA GROUP promotes the DRC's globally unique PETIT
+                        <h2 class="ftco-heading-2" data-translate="footer_about_title">About Us</h2>
+                        <p data-translate="footer_about_text">Founded in 2020 by Regine Tika Shungu, SAFIA GROUP promotes the DRC's globally unique PETIT
                             KWILU coffee, grown exclusively in Kongo Central, to the international market.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                             <li class="ftco-animate"><a href="https://youtu.be/idTdtfNns1g?si=HlnC5ELhjbWe2n-h"><span
@@ -178,7 +176,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Recent Blog</h2>
+                        <h2 class="ftco-heading-2" data-translate="footer_recent_blog_title">Recent Blog</h2>
                         <!-- <div class="block-21 mb-4 d-flex">
                             <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
                             <div class="text">
@@ -207,30 +205,30 @@
                 </div>
                 <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
                     <div class="ftco-footer-widget mb-4 ml-md-4">
-                        <h2 class="ftco-heading-2">Services</h2>
+                        <h2 class="ftco-heading-2" data-translate="footer_services_title">Services</h2>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">Growing Coffe Beans</a></li>
-                            <li><a href="#" class="py-2 d-block">Coffer beans Manufacturing</a></li>
-                            <li><a href="#" class="py-2 d-block">Coffee beans distribution</a></li>
-                            <li><a href="#" class="py-2 d-block">Coffe Shops</a></li>
+                            <li><a href="#" class="py-2 d-block" data-translate="footer_service_growing">Growing Coffee Beans</a></li>
+                            <li><a href="#" class="py-2 d-block" data-translate="footer_service_manufacturing">Coffee beans Manufacturing</a></li>
+                            <li><a href="#" class="py-2 d-block" data-translate="footer_service_distribution">Coffee beans distribution</a></li>
+                            <li><a href="#" class="py-2 d-block" data-translate="footer_service_shops">Coffee Shops</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
                     <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Have a Questions?</h2>
+                        <h2 class="ftco-heading-2" data-translate="footer_questions_title">Have a Questions?</h2>
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">Nos adresses : 115,
+                                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_1">Nos adresses : 115,
                                         Avenue Colonel Ebeya au croisement des Avenues du Marché.
                                     </span></li>
-                                <li><span class="icon icon-map-marker"></span><span class="text">
+                                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_2">
                                         51, Avenue Batetela au croisement du boulevard du 30 juin.
                                     </span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+243 977068929
+                                <li><a href="#"><span class="icon icon-phone"></span><span class="text" data-translate="footer_phone">+243 977068929
                                         </span></a></li>
                                 <li><a href="safiagroup84@gmail.com"><span class="icon icon-envelope"></span><span
-                                            class="text">safiagroup84@gmail.com</span></a></li>
+                                            class="text" data-translate="footer_email">safiagroup84@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -239,7 +237,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
 
-                    <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    <p data-translate="footer_copyright">
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
                         is made with <i class="icon-heart" aria-hidden="true"></i>
@@ -258,8 +256,8 @@
                 stroke="#F96D00" />
         </svg></div>
 
-    <script src="js/translations.js"></script>
-    <script src="js/language_switcher.js"></script>
+    <script src="js/aboutdetail_translations.js"></script>
+    <script src="js/aboutdetail_language_switcher.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery-migrate-3.0.1.min.js"></script>
     <script src="js/popper.min.js"></script>
