--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/custom-language.css">
 </head>
 
 <body>
@@ -305,7 +306,6 @@
 				<div class="col-md-3">
 					<div class="menu-entry">
 						<a href="#" class="img" style="background-image: url(images/2CUPA.jpeg);"></a>
-						<div class="text text-center pt-4">
 							<h3><a href="#" data-translate="best_sellers_expresso_title">EXPRESO</a></h3>
 							<!-- <p>A small river named Duden flows by their place and supplies</p> -->
 							<p class="price"><span data-translate="best_sellers_expresso_price">5000 FC</span></p>
