--- a/services.html
+++ b/services.html
@@ -33,45 +33,46 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container">
-			<a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU</small></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
-			</button>
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link" data-translate="nav_services">Services</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link" data-translate="nav_about">About</a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
-							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-							<a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
-							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
-						</div>
-					</li>
-					<li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
-					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false" data-translate="nav_language">
-							Language
-						</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-							<a class="dropdown-item" href="?lang=en" data-translate="lang_en">English</a>
-							<a class="dropdown-item" href="?lang=fr" data-translate="lang_fr">Français</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU</small></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="oi oi-menu"></span> Menu
+      </button>
+      <div class="collapse navbar-collapse" id="ftco-nav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item "><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
+          <li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
+          <li class="nav-item active"><a href="services.html" class="nav-link"
+              data-translate="nav_services">Services</a></li>
+          <li class="nav-item"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
+          <li class="nav-item"><a href="about.html" class="nav-link" data-translate="nav_about">About</a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
+              <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+              <a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
+              <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+            </div>
+          </li>
+          <li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
+          <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false" data-translate="nav_language">
+              Language
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+              <a class="dropdown-item" href="#" data-lang="en" data-translate="lang_en">English</a>
+              <a class="dropdown-item" href="#" data-lang="fr" data-translate="lang_fr">Français</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   <!-- END nav -->
 
   <section class="home-slider owl-carousel">
@@ -83,7 +84,9 @@
 
           <div class="col-md-7 col-sm-12 text-center ftco-animate">
             <h1 class="mb-3 mt-5 bread" data-translate="services_title">Services</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate="breadcrumb_home">Home</a></span> <span data-translate="breadcrumb_services">Services</span></p>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html"
+                  data-translate="breadcrumb_home">Home</a></span> <span
+                data-translate="breadcrumb_services">Services</span></p>
           </div>
 
         </div>
@@ -101,7 +104,8 @@
             </div>
             <div class="media-body">
               <h3 class="heading" data-translate="service_1_title">Specialty Coffee Beans</h3>
-              <p data-translate="service_1_text">At Café SAFI PETIT KWILU, we source only the finest Congolese Arabica and Robusta beans—handpicked from
+              <p data-translate="service_1_text">At Café SAFI PETIT KWILU, we source only the finest Congolese Arabica
+                and Robusta beans—handpicked from
                 the fertile hills of Kwilu and Kivu. Each batch is carefully sun-dried and expertly roasted to unlock
                 deep, complex flavors. Whether you prefer bright citrus notes or smoky chocolate richness, our beans
                 deliver an unforgettable cup. Perfect for home brewers and coffee connoisseurs alike..</p>
@@ -115,7 +119,8 @@
             </div>
             <div class="media-body">
               <h3 class="heading" data-translate="service_2_title"> Signature Coffee Bags</h3>
-              <p data-translate="service_2_text">Take the taste of Congo home with our freshly packed, airtight coffee bags—available in 250g, 500g, and
+              <p data-translate="service_2_text">Take the taste of Congo home with our freshly packed, airtight coffee
+                bags—available in 250g, 500g, and
                 1kg sizes. Every bag is filled with our premium beans, ground or whole, to suit your brewing style.
                 Designed for freshness, our resealable packaging ensures your coffee stays aromatic and flavorful for
                 weeks. Ideal for gifting or your daily ritual.</p>
@@ -129,7 +134,8 @@
             </div>
             <div class="media-body">
               <h3 class="heading" data-translate="service_3_title">Premium Packaging & Gifts</h3>
-              <p data-translate="service_3_text">Elevate your coffee experience with our elegant, reusable tins and handcrafted gift boxes, featuring
+              <p data-translate="service_3_text">Elevate your coffee experience with our elegant, reusable tins and
+                handcrafted gift boxes, featuring
                 vibrant Congolese designs. Perfect for corporate gifts, special occasions, or treating yourself to
                 something extraordinary. Each set includes our signature blend, a personalized note, and brewing tips.
                 Because great coffee deserves beautiful presentation.</p>
@@ -147,7 +153,8 @@
         <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2" data-translate="footer_about_us_title">About Us</h2>
-            <p data-translate="footer_about_us_text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+            <p data-translate="footer_about_us_text">Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia,
               there live the blind texts.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="https://youtu.be/idTdtfNns1g?si=HlnC5ELhjbWe2n-h"><span
@@ -197,8 +204,10 @@
             <h2 class="ftco-heading-2" data-translate="footer_services_title">Services</h2>
             <ul class="list-unstyled">
               <li><a href="#" class="py-2 d-block" data-translate="footer_services_growing">Growing Coffe Beans</a></li>
-              <li><a href="#" class="py-2 d-block" data-translate="footer_services_manufacturing">Coffer beans Manufacturing</a></li>
-              <li><a href="#" class="py-2 d-block" data-translate="footer_services_distribution">Coffee beans distribution</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_manufacturing">Coffer beans
+                  Manufacturing</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_distribution">Coffee beans
+                  distribution</a></li>
               <li><a href="#" class="py-2 d-block" data-translate="footer_services_shops">Coffe Shops</a></li>
             </ul>
           </div>
@@ -208,16 +217,18 @@
             <h2 class="ftco-heading-2" data-translate="footer_questions_title">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_1">Nos adresses : 115,
+                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_1">Nos
+                    adresses : 115,
                     Avenue Colonel Ebeya au croisement des Avenues du Marché.
                   </span></li>
                 <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_2">
                     51, Avenue Batetela au croisement du boulevard du 30 juin.
                   </span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text" data-translate="footer_phone">+243 977068929
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text"
+                      data-translate="footer_phone">+243 977068929
                     </span></a></li>
-                <li><a href="safiagroup84@gmail.com"><span class="icon icon-envelope"></span><span
-                      class="text" data-translate="footer_email">safiagroup84@gmail.com</span></a></li>
+                <li><a href="safiagroup84@gmail.com"><span class="icon icon-envelope"></span><span class="text"
+                      data-translate="footer_email">safiagroup84@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -226,7 +237,8 @@
       <div class="row">
         <div class="col-md-12 text-center">
 
-          <p data-translate="footer_copyright"><!-- Link back to FREELANCE SOLUTION can't be removed. Template is licensed under CC BY 3.0. -->
+          <p data-translate="footer_copyright">
+            <!-- Link back to FREELANCE SOLUTION can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved |FREELANCE SOLUTIONS <i
               class="icon-heart" aria-hidden="true"></i>
