--- a/about.html
+++ b/about.html
@@ -40,34 +40,28 @@
 			</button>
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="index.html" class="nav-link" data-translate-key="nav_home">Home</a></li>
-                    <li class="nav-item"><a href="menu.html" class="nav-link" data-translate-key="nav_menu">Menu</a></li>
-                    <li class="nav-item"><a href="services.html" class="nav-link" data-translate-key="nav_services">Services</a></li>
-                    <li class="nav-item"><a href="blog.html" class="nav-link" data-translate-key="nav_blog">Blog</a></li>
-                    <li class="nav-item active"><a href="about.html" class="nav-link" data-translate-key="nav_about">About</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
+                    <li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
+                    <li class="nav-item"><a href="services.html" class="nav-link" data-translate="nav_services">Services</a></li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
+                    <li class="nav-item active"><a href="about.html" class="nav-link" data-translate="nav_about">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false" data-translate-key="nav_info">Info</a>
+                            aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" href="cult.html" data-translate-key="nav_info_cultivation">Cultivation</a>
-                            <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-                            <a class="dropdown-item" href="manu.html" data-translate-key="nav_info_manufacturing">Manufacturing</a>
-                            <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+                            <a class="dropdown-item" href="cult.html" data-translate="nav_info_cultivation">Cultivation</a>
+                            <a class="dropdown-item" href="manu.html" data-translate="nav_info_manufacturing">Manufacturing</a>
                         </div>
                     </li>
-                    <li class="nav-item"><a href="contact.html" class="nav-link" data-translate-key="nav_contact">Contact</a></li>
-                    <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
-								class="icon icon-shopping_cart"></span><span
-								class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
-					</li> -->
+                    <li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false" data-translate-key="nav_language">
+                            aria-haspopup="true" aria-expanded="false" data-translate="nav_language">
                             Language
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-                            <a class="dropdown-item" href="?lang=en">English</a>
-                            <a class="dropdown-item" href="?lang=fr">Français</a>
+                            <a class="dropdown-item" href="#" data-lang="en" data-translate="lang_en">English</a>
+                            <a class="dropdown-item" href="#" data-lang="fr" data-translate="lang_fr">Français</a>
                         </div>
                     </li>
                 </ul>
@@ -84,9 +78,9 @@
 				<div class="row slider-text justify-content-center align-items-center">
 
 					<div class="col-md-7 col-sm-12 text-center ftco-animate">
-                        <h1 class="mb-3 mt-5 bread" data-translate-key="about_title">About Us</h1>
-                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate-key="breadcrumb_home">Home</a></span>
-                            <span data-translate-key="breadcrumb_about">About</span>
+                        <h1 class="mb-3 mt-5 bread" data-translate="about_title">About Us</h1>
+                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate="breadcrumb_home">Home</a></span>
+                            <span data-translate="breadcrumb_about">About</span>
                         </p>
 					</div>
 
@@ -100,17 +94,17 @@
 		<div class="one-half ftco-animate">
 			<div class="overlap">
 				<div class="heading-section ftco-animate ">
-					<span class="subheading" data-translate-key="about_our_story_subheading">Discover</span>
-					<h2 class="mb-4" data-translate-key="about_our_story_heading">Our Story</h2>
+					<span class="subheading" data-translate="about_our_story_subheading">Discover</span>
+					<h2 class="mb-4" data-translate="about_our_story_heading">Our Story</h2>
 				</div>
 				<div>
-					<p style="color: white;" data-translate-key="about_our_story_text">SAFIA GROUP: Company Profile
+					<p style="color: white;" data-translate="about_our_story_text">SAFIA GROUP: Company Profile
 						SAFIA GROUP is an innovative agricultural company focused on the coffee sector. They specialize
 						in the PETIT KWILU, a coffee variety unique in the world, cultivated exclusively in Kongo
 						Central, DRC. Founded in 2020 by Regine Tika Shungu, SAFIA GROUP aims to promote Congolese
 						coffee, particularly the Petit Kwilu variety, and to position the Democratic Republic of Congo
 						as a major player in the international coffee market.</p>
-					<button class="btn btn-primary btn-outline-primary px-4 py-3 mt-3"><a href="aboutdetail.html" data-translate-key="about_read_more_button">Read
+					<button class="btn btn-primary btn-outline-primary px-4 py-3 mt-3"><a href="aboutdetail.html" data-translate="about_read_more_button">Read
 							More</a></button>
 				</div>
 			</div>
@@ -123,9 +117,9 @@
 		<div class="container">
 			<div class="row justify-content-center mb-5">
 				<div class="col-md-7 heading-section text-center ftco-animate">
-					<span class="subheading">Testimony</span>
-					<h2 class="mb-4">Customers Says</h2>
-					<p>Our mission is to brew love and enjoyment into every cup, a sentiment echoed by every customer
+					<span class="subheading" data-translate="testimony_subheading">Testimony</span>
+					<h2 class="mb-4" data-translate="testimony_heading">Customers Says</h2>
+					<p data-translate="testimony_text">Our mission is to brew love and enjoyment into every cup, a sentiment echoed by every customer
 						who's experienced our coffee.</p>
 				</div>
 			</div>
@@ -155,13 +149,13 @@
 			<div class="row align-items-center">
 				<div class="col-md-6 pr-md-5">
 					<div class="heading-section text-md-right ftco-animate">
-						<span class="subheading">Discover</span>
-						<h2 class="mb-4">Our Menu</h2>
-						<p class="mb-4">From bold espresso to velvety lattes, our menu spans the spectrum of coffee
+						<span class="subheading" data-translate="menu_discover_subheading">Discover</span>
+						<h2 class="mb-4" data-translate="menu_discover_heading">Our Menu</h2>
+						<p class="mb-4" data-translate="menu_discover_text">From bold espresso to velvety lattes, our menu spans the spectrum of coffee
 							cravings.
-							Cold brew, flavored sips, or classic black—we’ve got your perfect match.
+							Cold brew, flavored sips, or classic black—we've got your perfect match.
 							Endless choices, one mission: your ideal cup.</p>
-						<p><a href="menu.html" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a>
+						<p><a href="menu.html" class="btn btn-primary btn-outline-primary px-4 py-3" data-translate="menu_view_full_button">View Full Menu</a>
 						</p>
 					</div>
 				</div>
@@ -205,7 +199,7 @@
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
 									<strong class="number" data-number="100">0</strong>
-									<span>Coffee Branches</span>
+									<span data-translate="counter_coffee_branches">Coffee Branches</span>
 								</div>
 							</div>
 						</div>
@@ -214,7 +208,7 @@
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
 									<strong class="number" data-number="85">0</strong>
-									<span>Number of Awards</span>
+									<span data-translate="counter_awards">Number of Awards</span>
 								</div>
 							</div>
 						</div>
@@ -223,7 +217,7 @@
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
 									<strong class="number" data-number="10567">0</strong>
-									<span>Happy Customer</span>
+									<span data-translate="counter_happy_customers">Happy Customer</span>
 								</div>
 							</div>
 						</div>
@@ -232,7 +226,7 @@
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
 									<strong class="number" data-number="900">0</strong>
-									<span>Staff</span>
+									<span data-translate="counter_staff">Staff</span>
 								</div>
 							</div>
 						</div>
@@ -248,8 +242,8 @@
 			<div class="row mb-5">
 				<div class="col-lg-3 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">About Us</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+						<h2 class="ftco-heading-2" data-translate="footer_about_us_title">About Us</h2>
+						<p data-translate="footer_about_us_text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="https://youtu.be/idTdtfNns1g?si=HlnC5ELhjbWe2n-h"><span
@@ -267,7 +261,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Recent Blog</h2>
+						<h2 class="ftco-heading-2" data-translate="footer_recent_blog_title">Recent Blog</h2>
 						<!-- <div class="block-21 mb-4 d-flex">
 							<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
 							<div class="text">
@@ -296,30 +290,30 @@
 				</div>
 				<div class="col-lg-2 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4 ml-md-4">
-						<h2 class="ftco-heading-2">Services</h2>
+						<h2 class="ftco-heading-2" data-translate="footer_services_title">Services</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">Growing Coffe Beans</a></li>
-							<li><a href="#" class="py-2 d-block">Coffer beans Manufacturing</a></li>
-							<li><a href="#" class="py-2 d-block">Coffee beans distribution</a></li>
-							<li><a href="#" class="py-2 d-block">Coffe Shops</a></li>
+							<li><a href="#" class="py-2 d-block" data-translate="footer_service_growing">Growing Coffee Beans</a></li>
+							<li><a href="#" class="py-2 d-block" data-translate="footer_service_manufacturing">Coffee beans Manufacturing</a></li>
+							<li><a href="#" class="py-2 d-block" data-translate="footer_service_distribution">Coffee beans distribution</a></li>
+							<li><a href="#" class="py-2 d-block" data-translate="footer_service_shops">Coffee Shops</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Have a Questions?</h2>
+						<h2 class="ftco-heading-2" data-translate="footer_questions_title">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Nos adresses : 115,
+								<li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_1">Nos adresses : 115,
 										Avenue Colonel Ebeya au croisement des Avenues du Marché.
 									</span></li>
-								<li><span class="icon icon-map-marker"></span><span class="text">
+								<li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_2">
 										51, Avenue Batetela au croisement du boulevard du 30 juin.
 									</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+243 977068929
+								<li><a href="#"><span class="icon icon-phone"></span><span class="text" data-translate="footer_phone">+243 977068929
 										</span></a></li>
 								<li><a href="safiagroup84@gmail.com"><span class="icon icon-envelope"></span><span
-											class="text">safiagroup84@gmail.com</span></a></li>
+											class="text" data-translate="footer_email">safiagroup84@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -327,12 +321,10 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
-
-					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+					<p data-translate="footer_copyright">
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE
 						SOLUTIONS <i class="icon-heart" aria-hidden="true"></i>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</p>
 				</div>
 			</div>
@@ -349,6 +341,8 @@
 		</svg></div>
 
 
+	<script src="js/about_translations.js"></script>
+	<script src="js/about_language_switcher.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
