--- a/blog.html
+++ b/blog.html
@@ -33,45 +33,42 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-		<div class="container">
-			<a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU</small></a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="oi oi-menu"></span> Menu
-			</button>
-			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Info</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="cult.html">Cultivation</a>
-							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-							<a class="dropdown-item" href="manu.html">Manufacturing</a>
-							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
-						</div>
-					</li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false" data-translate-key="nav_language">
-							Language
-						</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-							<a class="dropdown-item" href="?lang=en">English</a>
-							<a class="dropdown-item" href="?lang=fr">Français</a>
-						</div>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU</small></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+            aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="oi oi-menu"></span> Menu
+        </button>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
+                <li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
+                <li class="nav-item"><a href="services.html" class="nav-link" data-translate="nav_services">Services</a></li>
+                <li class="nav-item active"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link" data-translate="nav_about">About</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown04">
+                        <a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
+                        <a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
+                    </div>
+                </li>
+                <li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false" data-translate="nav_language">
+                        Language
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+                        <a class="dropdown-item" href="#" data-lang="en" data-translate="lang_en">English</a>
+                        <a class="dropdown-item" href="#" data-lang="fr" data-translate="lang_fr">Français</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
   <!-- END nav -->
 
 
@@ -83,8 +80,8 @@
         <div class="row slider-text justify-content-center align-items-center">
 
           <div class="col-md-7 col-sm-12 text-center ftco-animate">
-            <h1 class="mb-3 mt-5 bread">Blog</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Blog</span></p>
+            <h1 class="mb-3 mt-5 bread" data-translate="blog_title">Blog</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate="breadcrumb_home">Home</a></span> <span data-translate="breadcrumb_blog">Blog</span></p>
           </div>
 
         </div>
@@ -207,8 +204,8 @@
   <section class="ftco-section text-center"
     style="min-height: 300px; display: flex; align-items: center; justify-content: center;">
     <div class="container">
-      <h2 class="mb-4" style="font-size: 3rem;">Coming Soon</h2>
-      <p class="lead">Our blog is brewing! Stay tuned for updates.</p>
+      <h2 class="mb-4" style="font-size: 3rem;" data-translate="coming_soon_title">Coming Soon</h2>
+      <p class="lead" data-translate="coming_soon_text">Our blog is brewing! Stay tuned for updates.</p>
     </div>
   </section>
 
@@ -218,8 +215,8 @@
       <div class="row mb-5">
         <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">About Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
+            <h2 class="ftco-heading-2" data-translate="footer_about_us_title">About Us</h2>
+            <p data-translate="footer_about_us_text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
               blind texts.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -230,7 +227,7 @@
         </div>
         <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Recent Blog</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_recent_blog_title">Recent Blog</h2>
             <!-- <div class="block-21 mb-4 d-flex">
                 <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
                 <div class="text">
@@ -258,25 +255,25 @@
         </div>
         <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">Services</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_services_title">Services</h2>
             <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Cooked</a></li>
-              <li><a href="#" class="py-2 d-block">Deliver</a></li>
-              <li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-              <li><a href="#" class="py-2 d-block">Mixed</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_service_1">Cooked</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_service_2">Deliver</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_service_3">Quality Foods</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_service_4">Mixed</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_questions_title">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San
+                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address">203 Fake St. Mountain View, San
                     Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text" data-translate="footer_phone">+2 392 3929 210</span></a></li>
                 <li><a href="#"><span class="icon icon-envelope"></span><span
-                      class="text">info@yourdomain.com</span></a></li>
+                      class="text" data-translate="footer_email">info@yourdomain.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -284,12 +281,10 @@
       </div>
       <div class="row">
         <div class="col-md-12 text-center">
-
-          <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <p data-translate="footer_copyright">
             Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE SOLUTIONS <i
               class="icon-heart" aria-hidden="true"></i>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
       </div>
@@ -325,6 +320,8 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/blog_translations.js"></script>
+  <script src="js/blog_language_switcher.js"></script>
 
 </body>
 
