--- a/cult.html
+++ b/cult.html
@@ -50,17 +50,20 @@
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
+                            <a class="dropdown-item active" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
                             <a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
                         </div>
                     </li>
                     <li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
-                    <li class="nav-item">
-                        <select id="language-switcher" class="form-control"
-                            style="background-color: #212529; color: white; border: none;">
-                            <option value="en">English</option>
-                            <option value="fr">Français</option>
-                        </select>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <span id="current-lang">English</span>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+                            <a class="dropdown-item" href="#" data-lang="en">English</a>
+                            <a class="dropdown-item" href="#" data-lang="fr">Français</a>
+                        </div>
                     </li>
                 </ul>
             </div>
