--- a/manu.html
+++ b/manu.html
@@ -64,13 +64,16 @@
 						</div>
 					</li>
 					<li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
-					<li class="nav-item">
-                        <select id="language-switcher" class="form-control"
-                            style="background-color: #212529; color: white; border: none;">
-                            <option value="en">English</option>
-                            <option value="fr">Français</option>
-                        </select>
-                    </li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">
+							<span id="current-lang">English</span>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+							<a class="dropdown-item" href="#" data-lang="en">English</a>
+							<a class="dropdown-item" href="#" data-lang="fr">Français</a>
+						</div>
+					</li>
 				</ul>
 			</div>
 		</div>
