--- a/menu.html
+++ b/menu.html
@@ -55,7 +55,7 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item active"><a href="menu.html" class="nav-link">Menu</a></li>
+                        <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
                         <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -65,7 +65,7 @@
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
                                 <a class="dropdown-item" href="cult.html">Cultivation</a>
                                 <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-                                <a class="dropdown-item" href="manu.html">Manufacturing</a>
+                                <a class="dropdown-item active" href="manu.html">Manufacturing</a>
                                 <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
                             </div>
                         </li>
@@ -80,8 +80,8 @@
                                 Language
                             </a>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-                                <a class="dropdown-item" href="?lang=en">English</a>
-                                <a class="dropdown-item" href="?lang=fr">Français</a>
+                                <a class="dropdown-item" href="#" data-lang="en">English</a>
+                                <a class="dropdown-item" href="#" data-lang="fr">Français</a>
                             </div>
                         </li>
                     </ul>
